Adapt template pages

--- a/DjangoWebProject/app/templates/app/contact.html
+++ b/DjangoWebProject/app/templates/app/contact.html
@@ -1,4 +1,4 @@
-{% extends "app/layout.html" %}
+﻿{% extends "app/layout.html" %}
 
 {% block content %}
 
@@ -6,10 +6,10 @@
 <h3>{{ message }}</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Sklep internetowy<br />
+    Gabriela Narutowicza 11/12, 80-233 Gdańsk<br />
+    <abbr title="Telefon">Tel:</abbr>
+    +48 58 123 456 789
 </address>
 
 <address>
