--- a/DjangoWebProject/app/templates/app/layout.html
+++ b/DjangoWebProject/app/templates/app/layout.html
@@ -23,7 +23,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'home' %}">Home</a></li>
+                    <li><a href="{% url 'items' %}">Lista przedmiotów</a></li>
                     <li><a href="{% url 'contact' %}">Kontakt</a></li>
                 </ul>
                 {% include 'app/loginpartial.html' %}
@@ -32,7 +32,10 @@
     </div>
 
     <div class="container body-content">
-{% block content %}{% endblock %}
+        {% if toast %}
+        <h3>{{ toast }}</h3>
+        {% endif %}
+        {% block content %}{% endblock %}
         <hr/>
         <footer>
             <p>&copy; {{ year }} - Sklep internetowy</p>
