--- a/DjangoWebProject/app/templates/app/loginpartial.html
+++ b/DjangoWebProject/app/templates/app/loginpartial.html
@@ -2,8 +2,9 @@
 <form id="logoutForm" action="/logout" method="post" class="navbar-right">
     {% csrf_token %}
     <ul class="nav navbar-nav navbar-right">
-        <li><span class="navbar-brand">Hello {{ user.username }}!</span></li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li><span class="navbar-brand">Witaj {{ user.username }}!</span></li>
+        <li><a href="{% url 'cart items' %}">Koszyk</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Wyloguj</a></li>
     </ul>
 
 </form>
@@ -11,7 +12,7 @@
 {% else %}
 
 <ul class="nav navbar-nav navbar-right">
-    <li><a href="{% url 'login' %}">Log in</a></li>
+    <li><a href="{% url 'login' %}">Zaloguj</a></li>
 </ul>
 
 {% endif %}
